--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </button>
                 <a class="navbar-brand" href="index.html">SocKat Shop</a>
                 <div class="navbar-text titre">
-                    <h6>Funny Socks for men, women and kids<h6>
+                    <h6>Funny Socks for men, women and kids</h6>
                   </div>
             </div>
 
@@ -53,7 +53,7 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="about.html"><button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-shopping-cart"></span></button></a>
+            <a href="about.html"></a><button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </li>
     </ul>
 </div>
